--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,55 +6,40 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: us-west-2
-      EKS_CLUSTER_NAME: cpp-kubernetes-app-cluster
-      DOCKER_IMAGE: coderxhemi419/cpp-kubernetes-app-linux
-      DOCKER_TAG: latest
-
     steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      # Set up AWS CLI
-      - name: Configure AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: $AWS_REGION
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
 
-      # Build the C++ app
-      - name: Build C++ Application
-        run: |
-          mkdir -p build
-          cd build
-          cmake ..
-          make
+    - name: Build C++ Application
+      run: |
+        mkdir -p build
+        cd build
+        cmake ..
+        make
 
-      # Build the Docker image
-      - name: Build Docker Image
-        run: |
-          docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
+    - name: Build Docker Image
+      run: |
+        docker build -t cpp-kubernetes-app:latest .
 
-      # Login to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Push the Docker image to Docker Hub
-      - name: Push Docker Image
-        run: |
-          docker push $DOCKER_IMAGE:$DOCKER_TAG
+    - name: Push Docker Image
+      run: docker push cpp-kubernetes-app:latest
 
-      # Update Kubernetes Deployment
-      - name: Update Kubernetes Deployment
-        run: |
-          aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
-          kubectl set image deployment/cpp-kubernetes-app cpp-kubernetes-app=$DOCKER_IMAGE:$DOCKER_TAG
+    - name: Configure kubectl
+      run: aws eks --region us-west-2 update-kubeconfig --name cpp-kubernetes-app-cluster
+
+    - name: Deploy to EKS
+      run: |
+        kubectl apply -f k8s/cpp-kubernetes-app-deployment.yaml
+        kubectl apply -f k8s/cpp-kubernetes-app-service.yaml
