Reorganized YAML files into k8s directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ build/
 *.pdb
 *.ilk
 *.idb
+build/
+x64/
+*.log
+*.pdb
+*.ilk
+x64/
+build/
+*.log
+*.obj
+*.pdb
+*.ilk
+*.tlog
+*.lastbuildstate
+*.FileListAbsolute.txt
