--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Set up Docker Buildx
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
+    # Build the C++ Application
     - name: Build C++ Application
       run: |
         mkdir -p build
@@ -23,24 +26,28 @@ jobs:
         cmake ../src
         make
 
+    # Build Docker Image
     - name: Build Docker Image
       run: |
-        cd build
-        docker build -t cpp-kubernetes-app:latest .
+        docker build -t cpp-kubernetes-app:latest -f ./Dockerfile .
 
+    # Login to Docker Hub
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # Push Docker Image to Docker Hub
     - name: Push Docker Image
       run: docker push cpp-kubernetes-app:latest
 
+    # Configure kubectl with AWS EKS
     - name: Configure kubectl
       run: aws eks --region us-west-2 update-kubeconfig --name cpp-kubernetes-app-cluster
 
+    # Deploy the application to EKS
     - name: Deploy to EKS
       run: |
-        kubectl apply -f k8s/cpp-kubernetes-app-deployment.yaml
-        kubectl apply -f k8s/cpp-kubernetes-app-service.yaml
+        kubectl apply -f ./k8s/cpp-kubernetes-app-deployment.yaml
+        kubectl apply -f ./k8s/cpp-kubernetes-app-service.yaml
