--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,7 +29,7 @@ jobs:
     # Build Docker Image
     - name: Build Docker Image
       run: |
-        docker build coderxhemi419/cpp-kubernetes-app:latest -f ./Dockerfile .
+        docker build -t coderxhemi419/cpp-kubernetes-app:latest -f ./Dockerfile .
 
     # Login to Docker Hub
     - name: Login to Docker Hub
