--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -42,9 +42,17 @@ jobs:
     - name: Push Docker Image
       run: docker push coderxhemi419/cpp-kubernetes-app:latest
 
+    # Configure AWS credentials
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
     # Configure kubectl with AWS EKS
     - name: Configure kubectl
-      run: aws eks --region us-west-2 update-kubeconfig --name cpp-kubernetes-app-cluster
+      run: aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name cpp-kubernetes-app-cluster
 
     # Deploy the application to EKS
     - name: Deploy to EKS
