--- a/CppKubernetesApp/CppKubernetesApp.vcxproj.filters
+++ b/CppKubernetesApp/CppKubernetesApp.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="targetver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
