--- a/CppKubernetesApp/CppKubernetesApp.vcxproj
+++ b/CppKubernetesApp/CppKubernetesApp.vcxproj
@@ -138,6 +138,9 @@
   <ItemGroup>
     <ClInclude Include="targetver.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="index.html" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
